objects/ContractHistory__c.object
<CustomObject>
    <fields>
        <fullName>Custom_pricing_should_not_be_more_or_les__c</fullName>
        <label>Custom pricing should not be more or les</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Cannot be more</fullName>
                    <color>#FFFFFF</color>
                    <label>Cannot be more</label>
                </value>
                <value>
                    <fullName>Cannot be less</fullName>
                    <color>#FFFFFF</color>
                    <label>Cannot be less</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Fees_Other_1__c</fullName>
        <label>Customer Fees Other 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Fees_Other_2__c</fullName>
        <label>Customer Fees Other 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Fees_Other_3__c</fullName>
        <label>Customer Fees Other 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy_Cost_Plus_Pricing__c</fullName>
        <label>Customer_Hierarchy_Cost_Plus_Pricing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great Grandparent</fullName>
                    <color>#FFFFFF</color>
                    <label>Great Grandparent</label>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                    <color>#FFFFFF</color>
                    <label>Grandparent</label>
                </value>
                <value>
                    <fullName>Parent</fullName>
                    <color>#FFFFFF</color>
                    <label>Parent</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                    <color>#FFFFFF</color>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                    <color>#FFFFFF</color>
                    <label>Standalone</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>text(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_fees__c</fullName>
        <label>Customer fees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk item</fullName>
                </value>
                <value>
                    <fullName>Imports</fullName>
                </value>
                <value>
                    <fullName>Printed catalog</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Hosted catalog</fullName>
                </value>
                <value>
                    <fullName>Desktop delivery</fullName>
                </value>
                <value>
                    <fullName>Storeroom stocking</fullName>
                </value>
                <value>
                    <fullName>Customer item warehousing</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>VW shipping</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_fees_yes_other_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer fees yes other 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_fees_yes_other_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer fees yes other 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_fees_yes_other_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer fees yes other 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_item_warehousing_fee_language__c</fullName>
        <label>Customer item warehousing fee language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_breach_notification_period__c</fullName>
        <label>Data breach notification period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                </value>
                <value>
                    <fullName>Within 24 hours or less of breach confirmation</fullName>
                </value>
                <value>
                    <fullName>Within 72 hours or less of breach confirmation</fullName>
                </value>
                <value>
                    <fullName>More than 72 hours after breach confirmation</fullName>
                </value>
                <value>
                    <fullName>No specific time frame</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_type_received_from_customer__c</fullName>
        <label>Data type received from customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Public data</fullName>
                    <color>#FFFFFF</color>
                    <label>Public data</label>
                </value>
                <value>
                    <fullName>Confidential</fullName>
                    <color>#FFFFFF</color>
                    <label>Confidential</label>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                    <color>#FFFFFF</color>
                    <label>Restricted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Original_Contract_Signed__c</fullName>
        <label>Date Original Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_current_Legal_Contract_expires__c</fullName>
        <label>Date current Legal Contract expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decr_req_to_be_applied_to_NonCore_Cat__c</fullName>
        <label>Decr req to be applied to NonCore Cat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decreases_to_Cust_Non_Core_Non_Catalog__c</fullName>
        <label>Decreases to Cust Non-Core Non-Catalog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_NonCore_Cat_Structure__c</fullName>
        <label>Describe NonCore Cat Structure</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_number_of_Amendments__c</fullName>
        <label>Describe number of Amendments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desktop_delivery__c</fullName>
        <label>Desktop delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desktop_delivery_fee_language__c</fullName>
        <label>Desktop delivery fee language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desktopdelivery_language__c</fullName>
        <label>Desktop delivery language</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deviated_Pricing_offered_to_Customer__c</fullName>
        <label>Deviated Pricing offered to Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dimension_fee_for_furn_charge_are_exclud__c</fullName>
        <label>Excess Dimension Fee permitted per Agree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                    <color>#FFFFFF</color>
                    <label>Standard BSD terms</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diversity_Partner_Reseller_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diversity Partner / Reseller Name</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts1554724633</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diversity_Type_Requirement__c</fullName>
        <label>Diversity Type Requirement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disability Owned/Certified</fullName>
                    <color>#FFFFFF</color>
                    <label>Disability Owned/Certified</label>
                </value>
                <value>
                    <fullName>LGBTQ Owned/Certified</fullName>
                    <color>#FFFFFF</color>
                    <label>LGBTQ Owned/Certified</label>
                </value>
                <value>
                    <fullName>Minority Owned/Certified</fullName>
                    <color>#FFFFFF</color>
                    <label>Minority Owned/Certified</label>
                </value>
                <value>
                    <fullName>Native Alaskan Owned/Certified</fullName>
                    <color>#FFFFFF</color>
                    <label>Native Alaskan Owned/Certified</label>
                </value>
                <value>
                    <fullName>Native American Owned/Certified</fullName>
                    <color>#FFFFFF</color>
                    <label>Native American Owned/Certified</label>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                    <color>#FFFFFF</color>
                    <label>Small Business</label>
                </value>
                <value>
                    <fullName>Veteran Owned/Certified</fullName>
                    <color>#FFFFFF</color>
                    <label>Veteran Owned/Certified</label>
                </value>
                <value>
                    <fullName>Woman Owned/Certified</fullName>
                    <color>#FFFFFF</color>
                    <label>Woman Owned/Certified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_employee_purchases_go_toward_rebates__c</fullName>
        <label>Do employee purchases go toward rebates?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_s_missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document(s) missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation_confirmation_required_to_p__c</fullName>
        <label>Documentation/confirmation required to p</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                    <color>#FFFFFF</color>
                    <label>Evergreen</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_contract_have_provisions_for_an_emp__c</fullName>
        <label>Does contract have provisions for an emp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Need Validation</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_contract_include_ODP_Subsidiari__c</fullName>
        <label>Does the contract include ODP Subsidiari</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_written_agreement_allow_for_price__c</fullName>
        <label>Price chg if core exceeds a % annl volme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_Of_Each_Extension__c</fullName>
        <label>Duration Of Each Extension</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                    <color>#FFFFFF</color>
                    <label>1 Year</label>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>2 Years</label>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>3 Years</label>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>4 Years</label>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>5 Years</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDI_fee_language__c</fullName>
        <label>EDI fee language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Of_Current_Amendment__c</fullName>
        <label>Effective Date Of Current Amendment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Original_Contract_2__c</fullName>
        <label>Effective Date of Original Contract 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Original_Contract_3__c</fullName>
        <label>Effective Date of Original Contract 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Original_Contract__c</fullName>
        <label>Effective Date of Original Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_date_of_original_contract_1__c</fullName>
        <label>Effective date of original contract 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emp_Pricing_tied_to_Cust_Pricing__c</fullName>
        <label>Emp Pricing tied to Cust Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_date_of_Point_of_Sale_Discount__c</fullName>
        <label>End date of Point of Sale Discount?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excess_Dimension_Fees_Language__c</fullName>
        <label>Excess Dimension Fees Language</label>
        <length>28162</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executed_Amendments__c</fullName>
        <label>Executed Amendments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rebates</fullName>
                    <color>#FFFFFF</color>
                    <label>Rebates</label>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                    <color>#FFFFFF</color>
                    <label>Pricing</label>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                    <color>#FFFFFF</color>
                    <label>Delivery</label>
                </value>
                <value>
                    <fullName>Term Extension</fullName>
                    <color>#FFFFFF</color>
                    <label>Term Extension</label>
                </value>
                <value>
                    <fullName>Adjacencies</fullName>
                    <color>#FFFFFF</color>
                    <label>Adjacencies</label>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                    <color>#FFFFFF</color>
                    <label>Reporting</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executed_Upload_Email_Date__c</fullName>
        <label>Executed Upload Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Uploader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executed Uploader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts41554724634</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_Upload_Email_Date__c</fullName>
        <label>Execution Upload Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Uploader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Uploader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts31554724634</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension_Terms__c</fullName>
        <label>Extension Terms</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Language_Other_1__c</fullName>
        <label>Fee Language Other 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Language_Other_2__c</fullName>
        <label>Fee Language Other 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Language_Other_3__c</fullName>
        <label>Fee Language Other 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_program_language__c</fullName>
        <label>Flex program language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Floor_for_OffContract_Structure__c</fullName>
        <label>Floor for OffContract Structure</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_Child_Cust_Core__c</fullName>
        <label>Floors permitted in Child Cust Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_GP_Cust_Core__c</fullName>
        <label>Floors permitted in GP Cust Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_OffContr_Whlsler_str__c</fullName>
        <label>Floors permitted in OffContr/Whlsler str</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_Par_Cust_Core_List__c</fullName>
        <label>Floors permitted in Par Cust Core List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floors_permitted_in_Standalone_Cust_Core__c</fullName>
        <label>Floors permitted in Standalone Cust Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flrs_permitted_in_Cust_NonCore_Cat_struc__c</fullName>
        <label>Flrs permitted in Cust NonCore Cat struc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forced_inheritance_no_custom_cores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced inheritance (no custom cores)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>